--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -11,14 +11,25 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/background"
+        android:src="@drawable/alcoholl"
         android:scaleType="centerCrop"/>
 
-    
+    <ImageView
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"
+
+        android:id="@+id/logo2"/>
+
     <ScrollView
+        android:layout_below="@+id/logo2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
+
+
 
          <LinearLayout
             android:layout_width="match_parent"
@@ -28,6 +39,8 @@
              android:layout_marginStart="40dp"
              android:layout_marginEnd="40dp"
              >
+
+
             
             <TextView
                 android:layout_width="match_parent"
