--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -33,6 +33,16 @@
                 android:layout_marginTop="45dp"
                 android:background="@drawable/cercpoza" />
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="182dp"
+                android:text="fa-ti o poza" />
+
             <LinearLayout
                 android:id="@+id/lineA"
                 android:layout_width="wrap_content"
