--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,52 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Main2Activity">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
 
-        <RelativeLayout
+        <ListView
+            android:id="@+id/lista"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relA">
+            android:layout_height="match_parent"
+            android:layout_weight="90"
+            android:padding="10dp">
 
-            <ListView
-                android:id="@+id/lista"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:padding="10dp">
-
-            </ListView>
+        </ListView>
 
 
-
-
-        </RelativeLayout>
-
-
-
-    </ScrollView>
 
     <ImageView
+        android:id="@+id/backButton"
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:src="@drawable/backbuton"
-        android:id="@+id/backButton"
         android:layout_marginBottom="5dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_weight="10"
+        android:layout_gravity="center"
+        android:src="@drawable/backbuton" />
 
 
-
-</RelativeLayout>
+</LinearLayout>
