--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -149,14 +149,16 @@
 
             </com.github.mikephil.charting.charts.PieChart>
 
-            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/adView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/historyButton"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                ads:adSize="BANNER"
-                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+                android:scaleX="-1"
+                android:layout_gravity="center"
+                android:src="@drawable/backbuton"
+                />
 
         </RelativeLayout>
     </LinearLayout>
