--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -83,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:padding="10dp"
-                        android:text="Bauturi"
+                        android:text="Băuturi"
                         android:textStyle="bold"
                         android:textColor="#424242"
                         android:textSize="15dp" />
